Fixed Overlap Issue

--- a/style.css
+++ b/style.css
@@ -116,7 +116,8 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 0 3rem 0;
+  padding: 3rem 0 3rem 0;
+  height: auto;          
 }
 
 .landing h1 {
